--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -36,7 +36,7 @@ jobs:
         GITHUB_TOKEN: ${{ github.token }}
     - uses: marvinpinto/action-automatic-releases@latest
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
+        repo_token: ${{ github.token }}
         automatic_release_tag: "latest"
         prerelease: true
         title: "Development Build"
