--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
 	</distributionManagement>
 
     <repositories>
+		<repository>
+			<id>dv8tion</id>
+			<name>m2-dv8tion</name>
+			<url>https://m2.dv8tion.net/releases</url>
+		</repository>
         <repository>
             <id>jcenter</id>
             <name>jcenter-bintray</name>
@@ -70,7 +75,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>4.2.0_227</version>
+            <version>4.3.0_277</version>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
