--- a/pom.xml
+++ b/pom.xml
@@ -88,5 +88,10 @@
         	<artifactId>json</artifactId>
         	<version>0.1</version>
         </dependency>
+		<dependency>
+			<groupId>org.openjdk.nashorn</groupId>
+			<artifactId>nashorn-core</artifactId>
+			<version>15.3</version>
+		</dependency>
     </dependencies>
 </project>
