--- a/pom.xml
+++ b/pom.xml
@@ -93,5 +93,10 @@
 			<artifactId>nashorn-core</artifactId>
 			<version>15.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20211205</version>
+		</dependency>
     </dependencies>
 </project>
