--- a/pom.xml
+++ b/pom.xml
@@ -98,5 +98,15 @@
 			<artifactId>json</artifactId>
 			<version>20211205</version>
 		</dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.2.4</version>
+        </dependency>
     </dependencies>
 </project>
