--- a/.dockerignore
+++ b/.dockerignore
@@ -14,6 +14,7 @@ host/*
 !host/.placeholder
 plugins
 dependency-reduced-pom.xml
+.git
 webinterface/package-lock.json
 webinterface/.next
 webinterface/node_modules
