changes to build script

--- a/plugins_src/bmi_plugin/pom.xml
+++ b/plugins_src/bmi_plugin/pom.xml
@@ -61,7 +61,7 @@
                                     <type>${project.packaging}</type>
                                 </artifactItem>
                             </artifactItems>
-                            <outputDirectory>../plugins/</outputDirectory>
+                            <outputDirectory>../../plugins/</outputDirectory>
                         </configuration>
                     </execution>
                 </executions>
