--- a/plugins_src/wiki_plugin/.vscode/settings.json
+++ b/plugins_src/wiki_plugin/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-	"java.configuration.updateBuildConfiguration": "interactive"
+	"java.configuration.updateBuildConfiguration": "interactive",
+	"deno.enable": true,
+	"deno.lint": false,
+	"deno.unstable": false
 }
