fixed some shit (hopefully)

--- a/plugins_src/bmi_plugin/pom.xml
+++ b/plugins_src/bmi_plugin/pom.xml
@@ -8,6 +8,7 @@
     <artifactId>BetterNudelBmiPlugin</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
@@ -74,6 +75,14 @@
                     <mainClass>benutzerschnittstelle.Konsole</mainClass>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
