--- a/plugins_src/lagersimulation_plugin/pom.xml
+++ b/plugins_src/lagersimulation_plugin/pom.xml
@@ -74,6 +74,14 @@
                     <mainClass>benutzerschnittstelle.Konsole</mainClass>
                 </configuration>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.10.1</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
