--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,15 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.4.0</version>
+				<configuration>
+					<show>private</show>
+					<show>public</show>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
